hphp/test/slow/collection_classes/vector_map_private.php.expectf
Fatal error: Call to undefined function MyClass::mapper() in %s/vector_map_private.php on line 9
